# specs

./: .gitignore  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.old  NEWS  README  autogen.sh  configure.ac  fso-specs.pc.in
common/: Makefile  org.freesmartphone.xml.in
html/: README  index.html  index.html.in  net.connman.Manager.html  net.connman.Profile.html  net.connman.Technology.html  org.bluez.Adapter.html  org.bluez.Manager.html  org.bluez.NetworkServer.html  org.bluez.SerialProxyManager.html  org.bluez.Service.html  org.freedesktop.Gypsy.Accuracy.html  org.freedesktop.Gypsy.Course.html  org.freedesktop.Gypsy.Device.html  org.freedesktop.Gypsy.Position.html  org.freedesktop.Gypsy.Time.html  org.freesmartphone.Application.Manager.html  org.freesmartphone.Application.Session.html  org.freesmartphone.Audio.Manager.html  org.freesmartphone.Context.Client.html  org.freesmartphone.Context.Manager.html  org.freesmartphone.Data.World.html  org.freesmartphone.Device.AmbientLight.html  org.freesmartphone.Device.Audio.html  org.freesmartphone.Device.Display.html  org.freesmartphone.Device.IdleNotifier.html  org.freesmartphone.Device.Info.html  org.freesmartphone.Device.Input.html  org.freesmartphone.Device.LED.html  org.freesmartphone.Device.Orientation.html  org.freesmartphone.Device.PowerControl.html  org.freesmartphone.Device.PowerSupply.html  org.freesmartphone.Device.Proximity.html  org.freesmartphone.Device.RealtimeClock.html  org.freesmartphone.Device.Vibrator.html  org.freesmartphone.Error.html  org.freesmartphone.Events.html  org.freesmartphone.GSM.CB.html  org.freesmartphone.GSM.Call.html  org.freesmartphone.GSM.CallForwarding.html  (+57 more)
net.connman/: Makefile  net.connman.Manager.xml.in  net.connman.Profile.xml.in  net.connman.Technology.xml.in
odevice/: Makefile  org.freesmartphone.Device.Audio.xml.in  org.freesmartphone.Device.Display.xml.in  org.freesmartphone.Device.IdleNotifier.xml.in  org.freesmartphone.Device.Input.xml.in  org.freesmartphone.Device.LED.xml.in  org.freesmartphone.Device.PowerControl.xml.in  org.freesmartphone.Device.PowerSupply.xml.in  org.freesmartphone.Device.RealtimeClock.xml.in
oevents/: Makefile  org.freesmartphone.Events.xml.in
ogpsd/: org.freedesktop.Gypsy.Device.xml.in  org.freedesktop.Gypsy.Position.xml.in  org.freedesktop.Gypsy.Time.xml.in
onetwork/: org.freesmartphone.Network.xml.in
ophone/: Makefile  org.freesmartphone.Phone.Call.xml.in  org.freesmartphone.Phone.xml.in
opim/: Makefile  org.freesmartphone.PIM.Contact.xml.in  org.freesmartphone.PIM.ContactQuery.xml.in  org.freesmartphone.PIM.Contacts.xml.in  org.freesmartphone.PIM.Sources.xml.in
opreferences/: Makefile  org.freesmartphone.Preferences.Service.xml.in  org.freesmartphone.Preferences.xml.in
org.bluez/: Makefile  org.bluez.Adapter.xml.in  org.bluez.Manager.xml.in  org.bluez.NetworkServer.xml.in  org.bluez.SerialProxyManager.xml.in  org.bluez.Service.xml.in
org.freedesktop.Gypsy/: Makefile  org.freedesktop.Gypsy.Accuracy.xml.in  org.freedesktop.Gypsy.Course.xml.in  org.freedesktop.Gypsy.Device.xml.in  org.freedesktop.Gypsy.Position.xml.in  org.freedesktop.Gypsy.Time.xml.in
org.freesmartphone.Application/: Makefile  org.freesmartphone.Application.Manager.xml.in  org.freesmartphone.Application.Session.xml.in
org.freesmartphone.Audio/: Makefile  org.freesmartphone.Audio.Manager.xml.in
org.freesmartphone.Context/: Makefile  org.freesmartphone.Context.Client.xml.in  org.freesmartphone.Context.Manager.xml.in
org.freesmartphone.Data/: Makefile  org.freesmartphone.Data.World.xml.in
org.freesmartphone.Device/: Makefile  org.freesmartphone.Device.AmbientLight.xml.in  org.freesmartphone.Device.Audio.xml.in  org.freesmartphone.Device.AudioManager.xml.in  org.freesmartphone.Device.Display.xml.in  org.freesmartphone.Device.IdleNotifier.xml.in  org.freesmartphone.Device.Info.xml.in  org.freesmartphone.Device.Input.xml.in  org.freesmartphone.Device.LED.xml.in  org.freesmartphone.Device.Orientation.xml.in  org.freesmartphone.Device.PowerControl.xml.in  org.freesmartphone.Device.PowerSupply.xml.in  org.freesmartphone.Device.Proximity.xml.in  org.freesmartphone.Device.RealtimeClock.xml.in  (+1 more)
otapi/: Makefile  README  (+12 more)
(+181 files in other folders)
